Létrehozva a Colaboratory használatával

--- a/Colab/Methods.ipynb
+++ b/Colab/Methods.ipynb
@@ -8,7 +8,9 @@
       "collapsed_sections": [
         "kB2u_JTWKc1F",
         "RMazNvYpKc1H"
-      ]
+      ],
+      "toc_visible": true,
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -30,6 +32,16 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/fkonrad97/Network/blob/main/Colab/Methods.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "WlC1bPIBKc0x"
@@ -39,8 +51,48 @@
         "import numpy as np\n",
         "import random "
       ],
-      "execution_count": 17,
+      "execution_count": 104,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KEGJynjIX9Vs"
+      },
+      "source": [
+        "# Important variables, lists..."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xWVmGV65X3RS",
+        "outputId": "c3a5a8fa-52a1-4bfd-9a15-ed6daef21016",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# List of the positions of nodes\n",
+        "positions = positionRead(\"Network/Brain_data/Brain1Positions\")\n",
+        "\n",
+        "# List of how nodes connected to each other\n",
+        "connections = connectionRead(\"Network/Brain_data/Brain1Connections\")"
+      ],
+      "execution_count": 105,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "C:\\Users\\fkonr\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:6: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  \n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -65,7 +117,7 @@
         "    point2 = np.array((positions[0][p2], positions[1][p2], positions[2][p2]))\n",
         "    return np.linalg.norm(point1 - point2)"
       ],
-      "execution_count": 18,
+      "execution_count": 106,
       "outputs": []
     },
     {
@@ -85,7 +137,7 @@
         "    \n",
         "    return neighbours"
       ],
-      "execution_count": 19,
+      "execution_count": 107,
       "outputs": []
     },
     {
@@ -110,7 +162,7 @@
         "    avgNeighbourDist = sum(distances) / len(distances)\n",
         "    return avgNeighbourDist"
       ],
-      "execution_count": 20,
+      "execution_count": 108,
       "outputs": []
     },
     {
@@ -139,7 +191,7 @@
         "    avgNeighbourDistDifferences = sum(distances)/len(distances)\n",
         "    return avgNeighbourDistDifferences"
       ],
-      "execution_count": 21,
+      "execution_count": 109,
       "outputs": []
     },
     {
@@ -155,7 +207,7 @@
         "        dict[key] = []\n",
         "    dict[key].append(value)"
       ],
-      "execution_count": 22,
+      "execution_count": 110,
       "outputs": []
     },
     {
@@ -178,7 +230,7 @@
         "    \n",
         "    return dist"
       ],
-      "execution_count": 23,
+      "execution_count": 111,
       "outputs": []
     },
     {
@@ -197,7 +249,7 @@
         "    \n",
         "    return dist"
       ],
-      "execution_count": 24,
+      "execution_count": 112,
       "outputs": []
     },
     {
@@ -229,7 +281,7 @@
         "        \n",
         "    return ent"
       ],
-      "execution_count": 25,
+      "execution_count": 113,
       "outputs": []
     },
     {
@@ -244,7 +296,7 @@
         "    x = a * len(positions[0]) + b\n",
         "    return np.sum(dist[x])"
       ],
-      "execution_count": 26,
+      "execution_count": 114,
       "outputs": []
     },
     {
@@ -269,7 +321,7 @@
         "    \n",
         "    return list"
       ],
-      "execution_count": 27,
+      "execution_count": 115,
       "outputs": []
     },
     {
@@ -291,7 +343,7 @@
         "        l = sorted(l, key=lambda x: x[0])\n",
         "    return l"
       ],
-      "execution_count": 28,
+      "execution_count": 116,
       "outputs": []
     },
     {
@@ -312,7 +364,7 @@
         "        avg.append(num/len(positions[0]))\n",
         "    return avg"
       ],
-      "execution_count": 29,
+      "execution_count": 117,
       "outputs": []
     },
     {
@@ -360,7 +412,17 @@
         "            routing_dist.append(Euclidean_dist(act, dist[0][0]))\n",
         "            routing_nodes.append(z)\n",
         "            ready=True\n",
-        "\n",
+        "        \n",
+        "        # if 'act' has no neighbours \n",
+        "        elif len(neighbours) == 0:\n",
+        "            return \"No neighbours\"\n",
+        "        \n",
+        "        # if 'act' has just 1 neighbour\n",
+        "        elif len(neighbours) == 1:\n",
+        "            routing_dist.append(Euclidean_dist(act, dist[0][0]))\n",
+        "            act = neighbours[0]\n",
+        "            routing_nodes.append(act)\n",
+        "            \n",
         "        elif len(neighbours) > 1:\n",
         "            not_found = False\n",
         "            for i in dist:\n",
@@ -374,19 +436,9 @@
         "            if not_found == False:\n",
         "                routing_dist.append(Euclidean_dist(act, dist[0][0]))\n",
         "                act = dist[0][0]\n",
-        "                routing_nodes.append(act)\n",
-        "\n",
-        "        # if 'act' has just 1 neighbour\n",
-        "        elif len(neighbours) == 1:\n",
-        "            routing_dist.append(Euclidean_dist(act, dist[0][0]))\n",
-        "            act = neighbours[0]\n",
-        "            routing_nodes.append(act)\n",
-        "        \n",
-        "        # if 'act' has no neighbours \n",
-        "        elif len(neighbours) == 0:\n",
-        "            return \"No neighbours\""
+        "                routing_nodes.append(act)"
       ],
-      "execution_count": 55,
+      "execution_count": 118,
       "outputs": []
     },
     {
@@ -425,7 +477,17 @@
         "            routing_dist.append(Euclidean_dist(act, dist[0][0]))\n",
         "            routing_nodes.append(z)\n",
         "            ready=True\n",
-        "\n",
+        "        \n",
+        "        # if 'act' has no neighbours \n",
+        "        elif len(neighbours)==0:\n",
+        "            return \"No neighbours\"\n",
+        "        \n",
+        "        # if 'act' has just 1 neighbour\n",
+        "        elif len(neighbours) == 1:\n",
+        "            routing_dist.append(Euclidean_dist(act, dist[0][0]))\n",
+        "            act = neighbours[0]\n",
+        "            routing_nodes.append(act)\n",
+        "            \n",
         "        elif len(neighbours) > 1:\n",
         "            # distance from 'p' to the neighbours\n",
         "            dist1 = get_dist(act, neighbours)\n",
@@ -454,47 +516,10 @@
         "            if not_found == False:\n",
         "                routing_dist.append(Euclidean_dist(act, dist[0][0]))\n",
         "                act = dist[0][0]\n",
-        "                routing_nodes.append(act)\n",
-        "\n",
-        "        # if 'act' has just 1 neighbour\n",
-        "        elif len(neighbours) == 1:\n",
-        "            routing_dist.append(Euclidean_dist(act, dist[0][0]))\n",
-        "            act = neighbours[0]\n",
-        "            routing_nodes.append(act)\n",
-        "        \n",
-        "        # if 'act' has no neighbours \n",
-        "        elif len(neighbours)==0:\n",
-        "            return \"No neighbours\""
+        "                routing_nodes.append(act)"
       ],
-      "execution_count": 52,
+      "execution_count": 119,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "5VSPZbhqNI7e",
-        "outputId": "501138fa-dff7-4cde-bb85-56d07b5046fa",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "nodes = []\n",
-        "dist = []\n",
-        "\n",
-        "dijkstra(1,9,nodes,dist)"
-      ],
-      "execution_count": 53,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[(4, [15.344590572116752]), (0, [19.49822697213286]), (6, [25.798750941939833]), (5, [36.720471587727296]), (36, [41.395190709541474]), (33, [42.197853587912384]), (35, [45.286121681769224]), (37, [48.96544753911202]), (7, [52.988761474508685]), (48, [66.83591484552962]), (34, [67.55024761276022]), (47, [70.24085215312306]), (82, [79.30335523867505]), (24, [90.88549439891962]), (18, [107.84129652866407]), (23, [112.0130201522961]), (17, [114.70425154607828]), (22, [125.6035193958912])]\n",
-            "[(5, [32.373310145716125]), (33, [38.951915535245845]), (35, [42.706932767219335]), (36, [43.43564309241848]), (34, [44.451031502115114]), (7, [44.84036410692491]), (37, [45.1517229111004]), (4, [53.83213143549891]), (17, [54.190515949666526]), (18, [55.08246698267312]), (6, [57.51950554766205]), (48, [58.30259882559544]), (24, [67.90906887217683]), (0, [69.21539500072153]), (82, [69.84525602598247]), (23, [77.83006533931774]), (22, [82.94140517826806]), (47, [88.5662240698305])]\n"
-          ],
-          "name": "stdout"
-        }
-      ]
     },
     {
       "cell_type": "markdown",
@@ -547,7 +572,7 @@
         "            act = nextHop\n",
         "            routing_nodes.append(act)"
       ],
-      "execution_count": 32,
+      "execution_count": 120,
       "outputs": []
     },
     {
@@ -583,7 +608,17 @@
         "            routing_dist.append(Euclidean_dist(act, dist[0][0]))\n",
         "            routing_nodes.append(z)\n",
         "            ready=True\n",
-        "\n",
+        "        \n",
+        "        # if 'act' has no neighbours \n",
+        "        elif len(neighbours) == 0:\n",
+        "            return \"No neighbours\"\n",
+        "        \n",
+        "        # if 'act' has just 1 neighbour\n",
+        "        elif len(neighbours) == 1:\n",
+        "            routing_dist.append(Euclidean_dist(act, dist[0][0]))\n",
+        "            act = neighbours[0]\n",
+        "            routing_nodes.append(act)\n",
+        "            \n",
         "        elif len(neighbours) > 1:\n",
         "            list = []\n",
         "            for i in dist:\n",
@@ -597,19 +632,9 @@
         "            nextHop = random.choice(reduced_neighbours)\n",
         "            routing_dist.append(Euclidean_dist(act, nextHop))\n",
         "            act = nextHop\n",
-        "            routing_nodes.append(act)\n",
-        "\n",
-        "        # if 'act' has just 1 neighbour\n",
-        "        elif len(neighbours) == 1:\n",
-        "            routing_dist.append(Euclidean_dist(act, dist[0][0]))\n",
-        "            act = neighbours[0]\n",
-        "            routing_nodes.append(act)\n",
-        "        \n",
-        "        # if 'act' has no neighbours \n",
-        "        elif len(neighbours) == 0:\n",
-        "            return \"No neighbours\""
+        "            routing_nodes.append(act)"
       ],
-      "execution_count": 33,
+      "execution_count": 121,
       "outputs": []
     },
     {
@@ -636,10 +661,23 @@
         "        if z in neighbours:\n",
         "            routing.append(z)\n",
         "            return routing\n",
-        "\n",
+        "        \n",
+        "        # if 'act' has no neighbours \n",
+        "        elif len(neighbours)==0:\n",
+        "            return \"No neighbours\"\n",
+        "        \n",
+        "        # if 'act' has just 1 neighbour\n",
+        "        elif len(neighbours) == 1:\n",
+        "            act = neighbours[0]\n",
+        "            routing.append(act)\n",
+        "            \n",
         "        elif len(neighbours) > 1:\n",
         "            dist = get_dist(act, neighbours)\n",
-        "\n",
+        "            \n",
+        "            # print(\"Neighbours: \", neighbours)\n",
+        "            # print(\"DIST: \", dist)\n",
+        "            # print()\n",
+        "            \n",
         "            not_found = False\n",
         "            for i in dist:\n",
         "                if i[0] not in routing:\n",
@@ -650,18 +688,9 @@
         "            # If there are no more choosable node on the list     \n",
         "            if not_found == False:\n",
         "                act = dist[0][0]\n",
-        "                routing.append(act)\n",
-        "\n",
-        "        # if 'act' has just 1 neighbour\n",
-        "        elif len(neighbours) == 1:\n",
-        "            act = neighbours[0]\n",
-        "            routing.append(act)\n",
-        "        \n",
-        "        # if 'act' has no neighbours \n",
-        "        elif len(neighbours)==0:\n",
-        "            return \"No neighbours\""
+        "                routing.append(act)"
       ],
-      "execution_count": 34,
+      "execution_count": 122,
       "outputs": []
     },
     {
@@ -698,7 +727,7 @@
         "        nodes.append(routing_nodes)\n",
         "        dist.append(routing_dist)"
       ],
-      "execution_count": 35,
+      "execution_count": 123,
       "outputs": []
     },
     {
@@ -717,7 +746,7 @@
         "        nodes.append(routing_nodes)\n",
         "        dist.append(routing_dist)"
       ],
-      "execution_count": 36,
+      "execution_count": 124,
       "outputs": []
     },
     {
@@ -736,7 +765,7 @@
         "        nodes.append(routing_nodes)\n",
         "        dist.append(routing_dist)"
       ],
-      "execution_count": 37,
+      "execution_count": 125,
       "outputs": []
     },
     {
@@ -755,7 +784,7 @@
         "        nodes.append(routing_nodes)\n",
         "        dist.append(routing_dist)"
       ],
-      "execution_count": 38,
+      "execution_count": 126,
       "outputs": []
     },
     {
@@ -771,7 +800,7 @@
         "    if path not in nodes:\n",
         "        nodes.append(path)"
       ],
-      "execution_count": 39,
+      "execution_count": 127,
       "outputs": []
     },
     {
@@ -797,7 +826,7 @@
         "            if i!= j:\n",
         "                greedyAlgorithm(i,j,dist,nodes)"
       ],
-      "execution_count": 40,
+      "execution_count": 128,
       "outputs": []
     },
     {
@@ -814,7 +843,7 @@
         "            if i!= j:\n",
         "                dijkstraAlgorithm(i,j,dist,nodes)"
       ],
-      "execution_count": 41,
+      "execution_count": 129,
       "outputs": []
     },
     {
@@ -831,7 +860,7 @@
         "            if i!= j:\n",
         "                randAlgorithm(i,j,dist,nodes)"
       ],
-      "execution_count": 42,
+      "execution_count": 130,
       "outputs": []
     },
     {
@@ -848,7 +877,7 @@
         "            if i!= j:\n",
         "                randBoundaryAlgorithm(i,j,dist,nodes,boundary)"
       ],
-      "execution_count": 43,
+      "execution_count": 131,
       "outputs": []
     },
     {
@@ -865,7 +894,7 @@
         "            if i!= j:\n",
         "                greedyAlternative(i,j)"
       ],
-      "execution_count": 44,
+      "execution_count": 132,
       "outputs": []
     },
     {
@@ -889,7 +918,7 @@
         "    connections = pd.read_csv(name + \".csv\", header=None)\n",
         "    return connections"
       ],
-      "execution_count": 45,
+      "execution_count": 133,
       "outputs": []
     },
     {
@@ -907,7 +936,7 @@
         "    positions[0] = positions[0].astype(float)    # Convert data to numerical value\n",
         "    return positions"
       ],
-      "execution_count": 46,
+      "execution_count": 134,
       "outputs": []
     },
     {
@@ -923,7 +952,7 @@
         "    list=df[0].tolist()\n",
         "    return list"
       ],
-      "execution_count": 47,
+      "execution_count": 135,
       "outputs": []
     },
     {
@@ -951,7 +980,7 @@
         "        \n",
         "    return values"
       ],
-      "execution_count": 48,
+      "execution_count": 136,
       "outputs": []
     },
     {
@@ -967,48 +996,8 @@
         "        csv_out = csv.writer(csv_1)\n",
         "        csv_out.writerows([list[index]] for index in range(0, len(list)))"
       ],
-      "execution_count": 49,
+      "execution_count": 137,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "r_0JpvtoKc1J"
-      },
-      "source": [
-        "# Important variables, lists..."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "boH_pm9jKc1K",
-        "outputId": "aac859a4-99be-43f5-e2d6-d9774b8f4a07"
-      },
-      "source": [
-        "# List of the positions of nodes\n",
-        "positions = positionRead(\"Network/Brain_data/Brain1Positions\")\n",
-        "\n",
-        "# List of how nodes connected to each other\n",
-        "connections = connectionRead(\"Network/Brain_data/Brain1Connections\")"
-      ],
-      "execution_count": 50,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "C:\\Users\\fkonr\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:6: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  \n"
-          ],
-          "name": "stderr"
-        }
-      ]
     }
   ]
 }
