Létrehozva a Colaboratory használatával

--- a/Colab/Graph.ipynb
+++ b/Colab/Graph.ipynb
@@ -6,7 +6,7 @@
       "name": "Graph.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP40DuAMJnGmVzTYE6Mf1n7",
+      "authorship_tag": "ABX9TyOclzhT9RJjcyHW48h2WCzB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
         "import pandas as pd\n",
         "import numpy as np"
       ],
-      "execution_count": 139,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -56,7 +56,7 @@
         "    positions[0] = positions[0].astype(float)    # Convert data to numerical value\n",
         "    return positions"
       ],
-      "execution_count": 140,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -71,7 +71,7 @@
         "    connections = pd.read_csv(name + \".csv\", header=None)\n",
         "    return connections"
       ],
-      "execution_count": 141,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -81,7 +81,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "plZNvmkKOwQI",
-        "outputId": "fa32db77-b5d2-48e3-f398-c65fe1e4df73"
+        "outputId": "3844d714-b2c8-4eb1-f3b7-198bece4940e"
       },
       "source": [
         "# List of the positions of nodes\n",
@@ -90,7 +90,7 @@
         "# List of how nodes connected to each other\n",
         "connections = connectionRead(\"Network/Brain_data/Brain1Connections\")"
       ],
-      "execution_count": 142,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -119,7 +119,7 @@
         "    point2 = np.array((positions[0][p2], positions[1][p2], positions[2][p2]))\n",
         "    return np.linalg.norm(point1 - point2)"
       ],
-      "execution_count": 143,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -139,7 +139,7 @@
         "    \n",
         "    return neighbours"
       ],
-      "execution_count": 144,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -150,12 +150,12 @@
           "height": 399
         },
         "id": "EFC3m7juPZNi",
-        "outputId": "c44a07fe-9804-4ebd-ea7d-96d5a8dd819e"
+        "outputId": "7b85614f-ac2c-4b2b-b977-491e05d2113f"
       },
       "source": [
         "positions"
       ],
-      "execution_count": 145,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -276,7 +276,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 145
+          "execution_count": 19
         }
       ]
     },
@@ -288,12 +288,12 @@
           "height": 399
         },
         "id": "LAgsOl8GPZda",
-        "outputId": "cbe0fb29-1a44-4a7b-e1f1-24d18a5d52f1"
+        "outputId": "751b5484-d1b0-46fc-c785-152a779a5b9d"
       },
       "source": [
         "connections"
       ],
-      "execution_count": 146,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -643,7 +643,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 146
+          "execution_count": 20
         }
       ]
     },
@@ -661,7 +661,7 @@
         "        edges.append((i,j,Euclidean_dist(i,j)))\n",
         "  return edges"
       ],
-      "execution_count": 147,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -738,14 +738,14 @@
         "      current_node = end\n",
         "      path = []\n",
         "      while current_node is not None:\n",
-        "        path.append(current_node)\n",
+        "        path.append([current_node, self.node2node_paths[current_node][1]])\n",
         "        next_node = self.shortest_paths[current_node][0]\n",
         "        current_node = next_node\n",
         "      # Reverse path\n",
         "      path = path[::-1]\n",
         "      return path"
       ],
-      "execution_count": 148,
+      "execution_count": 85,
       "outputs": []
     },
     {
@@ -762,7 +762,7 @@
         "for edge in edges:\n",
         "    graph.add_edge(*edge)"
       ],
-      "execution_count": 149,
+      "execution_count": 86,
       "outputs": []
     },
     {
@@ -771,9 +771,16 @@
         "id": "YwmyYQV39z_C"
       },
       "source": [
-        "graph.findAll(0)"
+        "# Calculate all shortest paths\n",
+        "\n",
+        "paths = []\n",
+        "\n",
+        "for i in range(len(connections[0])):\n",
+        "  graph.findAll(i)\n",
+        "  for j in range(len(connections[0])):\n",
+        "    paths.append(graph.shortestPath(i,j))"
       ],
-      "execution_count": 154,
+      "execution_count": 87,
       "outputs": []
     }
   ]
