Létrehozva a Colaboratory használatával

--- a/Colab/Methods.ipynb
+++ b/Colab/Methods.ipynb
@@ -51,7 +51,7 @@
         "import numpy as np\n",
         "import random "
       ],
-      "execution_count": 5,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -77,7 +77,7 @@
         "    point2 = np.array((positions[0][p2], positions[1][p2], positions[2][p2]))\n",
         "    return np.linalg.norm(point1 - point2)"
       ],
-      "execution_count": 6,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -97,7 +97,7 @@
         "    \n",
         "    return neighbours"
       ],
-      "execution_count": 7,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -122,7 +122,7 @@
         "    avgNeighbourDist = sum(distances) / len(distances)\n",
         "    return avgNeighbourDist"
       ],
-      "execution_count": 8,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -151,7 +151,7 @@
         "    avgNeighbourDistDifferences = sum(distances)/len(distances)\n",
         "    return avgNeighbourDistDifferences"
       ],
-      "execution_count": 9,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -167,7 +167,7 @@
         "        dict[key] = []\n",
         "    dict[key].append(value)"
       ],
-      "execution_count": 10,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -190,7 +190,7 @@
         "    \n",
         "    return dist"
       ],
-      "execution_count": 11,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -209,7 +209,7 @@
         "    \n",
         "    return dist"
       ],
-      "execution_count": 12,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -241,7 +241,7 @@
         "        \n",
         "    return ent"
       ],
-      "execution_count": 13,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -256,7 +256,7 @@
         "    x = a * len(positions[0]) + b\n",
         "    return np.sum(dist[x])"
       ],
-      "execution_count": 14,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -281,7 +281,7 @@
         "    \n",
         "    return list"
       ],
-      "execution_count": 15,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -303,7 +303,7 @@
         "        l = sorted(l, key=lambda x: x[0])\n",
         "    return l"
       ],
-      "execution_count": 16,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -324,7 +324,7 @@
         "        avg.append(num/len(positions[0]))\n",
         "    return avg"
       ],
-      "execution_count": 17,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -398,7 +398,7 @@
         "                act = dist[0][0]\n",
         "                routing_nodes.append(act)"
       ],
-      "execution_count": 18,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -420,6 +420,8 @@
         "# If the closest node is already on the routing list, the algorithm will choose the next one in the ascendant list.\n",
         "# A node could be on the routing table several times, if the algorithm already used all of the elements in the neighbour list.\n",
         "# If that happens, it will choose the closest one again.\n",
+        "\n",
+        "# NOT DIJKSTRA\n",
         "\n",
         "def dijkstra(p, z, routing_nodes, routing_dist):\n",
         "    ready = False\n",
@@ -478,7 +480,7 @@
         "                act = dist[0][0]\n",
         "                routing_nodes.append(act)"
       ],
-      "execution_count": 19,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -532,7 +534,7 @@
         "            act = nextHop\n",
         "            routing_nodes.append(act)"
       ],
-      "execution_count": 20,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -594,7 +596,7 @@
         "            act = nextHop\n",
         "            routing_nodes.append(act)"
       ],
-      "execution_count": 21,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -650,7 +652,7 @@
         "                act = dist[0][0]\n",
         "                routing.append(act)"
       ],
-      "execution_count": 22,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -687,7 +689,7 @@
         "        nodes.append(routing_nodes)\n",
         "        dist.append(routing_dist)"
       ],
-      "execution_count": 23,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -706,7 +708,7 @@
         "        nodes.append(routing_nodes)\n",
         "        dist.append(routing_dist)"
       ],
-      "execution_count": 24,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -725,7 +727,7 @@
         "        nodes.append(routing_nodes)\n",
         "        dist.append(routing_dist)"
       ],
-      "execution_count": 25,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -744,7 +746,7 @@
         "        nodes.append(routing_nodes)\n",
         "        dist.append(routing_dist)"
       ],
-      "execution_count": 26,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -760,7 +762,7 @@
         "    if path not in nodes:\n",
         "        nodes.append(path)"
       ],
-      "execution_count": 27,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -786,7 +788,7 @@
         "            if i!= j:\n",
         "                greedyAlgorithm(i,j,dist,nodes)"
       ],
-      "execution_count": 28,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -803,7 +805,7 @@
         "            if i!= j:\n",
         "                dijkstraAlgorithm(i,j,dist,nodes)"
       ],
-      "execution_count": 29,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -820,7 +822,7 @@
         "            if i!= j:\n",
         "                randAlgorithm(i,j,dist,nodes)"
       ],
-      "execution_count": 30,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -837,7 +839,7 @@
         "            if i!= j:\n",
         "                randBoundaryAlgorithm(i,j,dist,nodes,boundary)"
       ],
-      "execution_count": 31,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -854,7 +856,7 @@
         "            if i!= j:\n",
         "                greedyAlternative(i,j)"
       ],
-      "execution_count": 32,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -878,7 +880,7 @@
         "    connections = pd.read_csv(name + \".csv\", header=None)\n",
         "    return connections"
       ],
-      "execution_count": 33,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -896,7 +898,7 @@
         "    positions[0] = positions[0].astype(float)    # Convert data to numerical value\n",
         "    return positions"
       ],
-      "execution_count": 34,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -912,7 +914,7 @@
         "    list=df[0].tolist()\n",
         "    return list"
       ],
-      "execution_count": 35,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -940,7 +942,7 @@
         "        \n",
         "    return values"
       ],
-      "execution_count": 36,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -956,7 +958,7 @@
         "        csv_out = csv.writer(csv_1)\n",
         "        csv_out.writerows([list[index]] for index in range(0, len(list)))"
       ],
-      "execution_count": 37,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -972,10 +974,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "Y07lgLrxY0Np",
-        "outputId": "3c43e27e-a451-496f-8589-e6394d4d7f9d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "413d2067-aa24-4771-e9be-5e39c1d9eecc"
       },
       "source": [
         "# List of the positions of nodes\n",
@@ -984,7 +986,7 @@
         "# List of how nodes connected to each other\n",
         "connections = connectionRead(\"Network/Brain_data/Brain1Connections\")"
       ],
-      "execution_count": 38,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
