Létrehozva a Colaboratory használatával

--- a/Shortest_Paths.ipynb
+++ b/Shortest_Paths.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Shortest_Paths.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP9FRXrrF16BfULad/Cegj4",
+      "authorship_tag": "ABX9TyOjbVrrsfrbNs6P067Wxp4T",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -14,7 +14,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -43,7 +44,7 @@
         "from collections import deque\n",
         "import random"
       ],
-      "execution_count": 1,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -59,7 +60,7 @@
         "        csv_out = csv.writer(csv_1)\n",
         "        csv_out.writerows([list[index]] for index in range(0, len(list)))"
       ],
-      "execution_count": 2,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -77,7 +78,7 @@
         "    positions[0] = positions[0].astype(float)    # Convert data to numerical value\n",
         "    return positions"
       ],
-      "execution_count": 3,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -92,7 +93,7 @@
         "    connections = pd.read_csv(name + \".csv\", header=None)\n",
         "    return connections"
       ],
-      "execution_count": 4,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -102,7 +103,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ube6zpo4NeTo",
-        "outputId": "aed36ee2-cf01-4c1f-9cb1-6c4586f8b496"
+        "outputId": "b43dd222-27dd-427c-ba5e-4af9f21ca079"
       },
       "source": [
         "# List of the positions of nodes\n",
@@ -111,7 +112,7 @@
         "# List of how nodes connected to each other\n",
         "connections = connectionRead(\"Network/Brain_data/Brain1Connections\")"
       ],
-      "execution_count": 5,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -155,7 +156,7 @@
         "        \n",
         "    return ent"
       ],
-      "execution_count": 6,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -176,7 +177,7 @@
         "    dest += 1\n",
         "  paths.append(route)"
       ],
-      "execution_count": 7,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -275,7 +276,7 @@
         "\n",
         "    return paths"
       ],
-      "execution_count": 8,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -302,7 +303,7 @@
         "  for j in i:\n",
         "    add_edge(adj, j[0], j[1])"
       ],
-      "execution_count": 9,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -318,7 +319,7 @@
         "    if i!=j:\n",
         "      shortest_paths.append(getPaths(adj, n, i, j))"
       ],
-      "execution_count": 10,
+      "execution_count": 37,
       "outputs": []
     },
     {
@@ -335,36 +336,42 @@
         "    routes.append(random.choice(i))\n",
         "  routingTable.append(routes)"
       ],
-      "execution_count": 11,
+      "execution_count": 38,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-NYI0HbjBo62"
+        "id": "-NYI0HbjBo62",
+        "outputId": "a861ce59-f383-4a5a-ab2d-79b627ef53c2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "entropyTables = []\n",
-        "epochSize = len(connections[0])\n",
+        "'''entropyTables = []\n",
         "\n",
         "for i in routingTable:\n",
-        "  table = []\n",
         "  temp = []\n",
-        "  cnt = 0\n",
         "  for j in i:\n",
-        "    if cnt < epochSize:\n",
-        "      temp.append(entropy(j))\n",
-        "      cnt+=1\n",
-        "    else:\n",
-        "      table.append(temp)\n",
-        "      temp = []\n",
-        "      cnt=0\n",
-        "  entropyTables.append(table)\n",
-        "\n",
-        "entropyTables"
+        "    temp.append(entropy(j))\n",
+        "  entropyTables.append(temp)'''"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'entropyTables = []\\n\\nfor i in routingTable:\\n  temp = []\\n  for j in i:\\n    temp.append(entropy(j))\\n  entropyTables.append(temp)'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 44
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -372,10 +379,36 @@
         "id": "_KZbWDo_FeLr"
       },
       "source": [
+        "epochSize = len(connections[0])\n",
+        "ent = []\n",
+        "\n",
+        "cnt = 0\n",
         "for i in entropyTables:\n",
-        "  print(i)"
+        "  temp = []\n",
+        "  table = []\n",
+        "  for j in i:\n",
+        "    if cnt == epochSize:\n",
+        "      table.append(temp)\n",
+        "      temp = []\n",
+        "      cnt = 0\n",
+        "    if cnt < epochSize:\n",
+        "      temp.append(j)\n",
+        "      cnt += 1\n",
+        "  cnt = 0\n",
+        "  ent.append(table)"
       ],
-      "execution_count": null,
+      "execution_count": 50,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lTFns5SzMeu0"
+      },
+      "source": [
+        "ent"
+      ],
+      "execution_count": 52,
       "outputs": []
     }
   ]
